RESOLVED FIXED181419
Pass around Vector<Ref<WebContextMenuItem>> instead of WKArrayRef or Vector<WebContextMenuItemData>
https://bugs.webkit.org/show_bug.cgi?id=181419
Summary Pass around Vector<Ref<WebContextMenuItem>> instead of WKArrayRef or Vector<W...
Alex Christensen
Reported 2018-01-08 17:27:06 PST
Pass around Vector<Ref<WebContextMenuItem>> instead of WKArrayRef or Vector<WebContextMenuItemData>
Attachments
Patch (7.17 KB, patch)
2018-01-08 17:28 PST, Alex Christensen
no flags
Patch (8.56 KB, patch)
2018-01-08 17:35 PST, Alex Christensen
no flags
Patch (9.14 KB, patch)
2018-01-08 17:40 PST, Alex Christensen
no flags
Alex Christensen
Comment 1 2018-01-08 17:28:20 PST
Alex Christensen
Comment 2 2018-01-08 17:35:18 PST
Alex Christensen
Comment 3 2018-01-08 17:40:04 PST
Alex Christensen
Comment 4 2018-01-08 17:54:06 PST
Radar WebKit Bug Importer
Comment 5 2018-01-08 17:58:42 PST
Ryosuke Niwa
Comment 6 2018-01-08 19:08:59 PST
This patch appears to have broken iOS builds: /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.0.sdk/System/Library/Frameworks/System.framework/PrivateHeaders -include /Volumes/Data/EWS/WebKit/WebKitBuild/PrecompiledHeaders/WebKit2Prefix-drveltbyitydmohjorffrkcgteab/WebKit2Prefix.h -MMD -MT dependencies -MF /Volumes/Data/EWS/WebKit/WebKitBuild/WebKit.build/Release-iphonesimulator/WebKit.build/Objects-normal/x86_64/WKContextMenuListener.d --serialize-diagnostics /Volumes/Data/EWS/WebKit/WebKitBuild/WebKit.build/Release-iphonesimulator/WebKit.build/Objects-normal/x86_64/WKContextMenuListener.dia -c /Volumes/Data/EWS/WebKit/Source/WebKit/UIProcess/API/C/WKContextMenuListener.cpp -o /Volumes/Data/EWS/WebKit/WebKitBuild/WebKit.build/Release-iphonesimulator/WebKit.build/Objects-normal/x86_64/WKContextMenuListener.o /Volumes/Data/EWS/WebKit/Source/WebKit/UIProcess/API/C/WKContextMenuListener.cpp:63:18: error: use of undeclared identifier 'items' UNUSED_PARAM(items); ^ Fix attempted in https://trac.webkit.org/changeset/226608
Note You need to log in before you can comment on or make changes to this bug.